--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
+/* Colors #ff9900 #ffdf7e #000000 */
+
 .App {
   text-align: center;
+  display: grid;
+  width: 100%;
+
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-rows: 1fr 4fr;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Logo-Title {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+
+  grid-row-start: 1;
+  grid-column-start: 1;
+}
+
+.Logo-Img {
+  height: 150px;
+  max-width: 150px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.Table-Container {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  grid-row-start: 2;
+  grid-column-start: 2;
 }
